# rust-web-exercise-logger

./: .gitignore  Cargo.toml  Shuttle.toml
.shuttle/: config.toml
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: health.rs  users.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml
