[package]
name = "api-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
# users
pasetors = "0.7.7"
once_cell = "1.18.0"
hex = "0.4.3"
chrono = "0.4.26"
argon2 = "0.5.3"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde_json = {version = "1.0", features = ["serde_json "]}
minijinja = { version = "2.11.0", features = ["source"] }
lettre  = { version = "0.10.0-rc.4", features = ["builder", "tokio1-native-tls"] }
