[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = "1.26.0"
api-lib = { path = "../lib" }
# database
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
